[workspace]
resolver = "3"
members = ["crates/bin/hanabi"]

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
authors = ["Lucas Morais <lucas@znth.systems>"]
license = "MIT or Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Northwind-Software/hanabi"
repository = "https://github.com/Northwind-Software/hanabi"
documentation = "https://github.com/Northwind-Software/hanabi/wiki"
publish = true

[workspace.dependencies]
