[package]
name = "hanabi-client"
description = "Hanabi's Client API for Rust"
version = "0.1.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
