[package]
name = "hanabi-core"
description = "Hanabi core library with common types and shared functionality"
version = "0.1.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }

ulid = { workspace = true }
chrono = { workspace = true }

xxhash-rust = { workspace = true }

flume = { workspace = true }

tracing = { workspace = true }

thiserror = { workspace = true }